--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
 <a href="week17.html"><b>17</b></a>
-<a href="week18.html"><b>18P</b></a><br>
+<a href="week18.html"><b>18</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -102,9 +102,9 @@
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8150</font></td>
+    <td><font size=2>8900</font></td>
     <td><font size=2>8975</font></td>
-    <td><font size=2>700</font></td>
+    <td><font size=2>750</font></td>
     <td><font size=2>215</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
@@ -142,7 +142,7 @@
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10500</font></td>
+    <td><font size=2>10845</font></td>
     <td><font size=2>9940</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>340</font></td>
@@ -150,10 +150,10 @@
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>9130</font></td>
+    <td><font size=2>9155</font></td>
     <td><font size=2>10390</font></td>
     <td><font size=2>790</font></td>
-    <td><font size=2>250</font></td>
+    <td><font size=2>25</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
