--- a/week18.html
+++ b/week18.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (5)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>90</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>185</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>160</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DSmith (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McConkey (D)</td>  <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>DSmith (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>LaPorta</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Dicker</td>        <td></td><td align=right>135</td></tr>
+<tr><td>McConkey (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
-<tr><td>LJackson (D)</td>  <td></td><td align=right>0</td></tr>
-<tr><td>Barkley (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Barkley (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>185</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>40</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn (D)</td> <td></td><td align=right>0</td></tr>
-<tr><td>Penix</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Andrews (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Fairbairn (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>Penix</td>         <td></td><td align=right>250</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (1)</b></font></td></tr>
-<tr><td>Flacco</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Flacco</td>        <td></td><td align=right>140</td></tr>
 <tr><td>Guerendo</td>      <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bowers</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Karty</td>         <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>290</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Bowers</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Karty</td>         <td></td><td align=right>185</td></tr>
 <tr><td>Vidal</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>750</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>JCook (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>JAllen (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>JCook (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>TJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Higgins</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td>RDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>95</td></tr>
+<tr><td>RDavis</td>        <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 </tr>
@@ -66,29 +66,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Stafford (D)</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Stafford (D)</td>  <td></td><td align=right>***</td></tr>
 <tr><td>CBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McBride</td>       <td></td><td align=right>80</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>130</td></tr>
 <tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (4)</b></font></td></tr>
-<tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kraft (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Nix</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>RWilson</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>440</td></tr>
+<tr><td>Dobbins</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>120</td></tr>
+<tr><td>BThomas</td>       <td></td><td align=right>50</td></tr>
+<tr><td>Kraft (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>75</td></tr>
+<tr><td>Nix</td>           <td></td><td align=right>250</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -101,23 +101,23 @@
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Odunze</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>25</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Goff (D)</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Warren (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Chase (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Pickens (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Kelce (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Bates (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Reichard (D)</td>  <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Goff (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Jacobs (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Warren (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Chase (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Pickens (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Bates (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Reichard (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 </tr>
@@ -126,28 +126,28 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (8)</b></font></td></tr>
 <tr><td>Love</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Charbonnet</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Charbonnet</td>    <td></td><td align=right>25</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McMillan</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>35</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>25</td></tr>
+<tr><td>JSmith</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>50</td></tr>
+<tr><td>McMillan</td>      <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>345</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Irving</td>        <td></td><td align=right>0</td></tr>
-<tr><td>NCollins (D)</td>  <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Strange</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Boswell</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>210</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>315</td></tr>
+<tr><td>Irving</td>        <td></td><td align=right>140</td></tr>
+<tr><td>NCollins (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>80</td></tr>
+<tr><td>Strange</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Boswell</td>       <td></td><td align=right>70</td></tr>
 <tr><td>Daniels</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -193,9 +193,9 @@
 <tr><td><font size=2>States(1)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8150</font></td>
+    <td><font size=2>8900</font></td>
     <td><font size=2>8975</font></td>
-    <td><font size=2>700</font></td>
+    <td><font size=2>750</font></td>
     <td><font size=2>215</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(7)</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>Steven(8)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>10500</font></td>
+    <td><font size=2>10845</font></td>
     <td><font size=2>9940</font></td>
     <td><font size=2>975</font></td>
     <td><font size=2>340</font></td>
@@ -241,10 +241,10 @@
 <tr><td><font size=2>Rich(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>9130</font></td>
+    <td><font size=2>9155</font></td>
     <td><font size=2>10390</font></td>
     <td><font size=2>790</font></td>
-    <td><font size=2>250</font></td>
+    <td><font size=2>25</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
