--- a/week18.html
+++ b/week18.html
@@ -11,25 +11,25 @@
 <tr><td>BRobinson</td>     <td></td><td align=right>185</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>160</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DSmith (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>DSmith (D)</td>    <td></td><td align=right>25</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>135</td></tr>
 <tr><td>McConkey (D)</td>  <td></td><td align=right>220</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>845</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (10)</b></font></td></tr>
 <tr><td>LJackson (D)</td>  <td></td><td align=right>115</td></tr>
-<tr><td>Barkley (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Barkley (D)</td>   <td></td><td align=right>55</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>185</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>40</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn (D)</td> <td></td><td align=right>120</td></tr>
 <tr><td>Penix</td>         <td></td><td align=right>250</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>765</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -50,15 +50,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (2)</b></font></td></tr>
-<tr><td>JAllen (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>JCook (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>JAllen (D)</td>    <td></td><td align=right>220</td></tr>
+<tr><td>JCook (D)</td>     <td></td><td align=right>110</td></tr>
 <tr><td>TJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McLaughlin</td>    <td></td><td align=right>95</td></tr>
 <tr><td>RDavis</td>        <td></td><td align=right>80</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>530</td></tr>
 </table>
 </td>
 </tr>
@@ -85,10 +85,10 @@
 <tr><td>Dobbins</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>120</td></tr>
 <tr><td>BThomas</td>       <td></td><td align=right>50</td></tr>
-<tr><td>Kraft (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Kraft (D)</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>75</td></tr>
 <tr><td>Nix</td>           <td></td><td align=right>250</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>1015</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -110,7 +110,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
 <tr><td>Goff (D)</td>      <td></td><td align=right>***</td></tr>
-<tr><td>Jacobs (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Jacobs (D)</td>    <td></td><td align=right>90</td></tr>
 <tr><td>Warren (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Remigio (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Pickens (D)</td>   <td></td><td align=right>140</td></tr>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>Randy(5)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11165</font></td>
+    <td><font size=2>12010</font></td>
     <td><font size=2>9365</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>295</font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Roger(2)</font></td>
     <td><font size=2>12</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>12245</font></td>
+    <td><font size=2>12775</font></td>
     <td><font size=2>9505</font></td>
     <td><font size=2>1185</font></td>
     <td><font size=2>375</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>Grant(10)</font></td>
     <td><font size=2>12</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>13885</font></td>
+    <td><font size=2>14650</font></td>
     <td><font size=2>10395</font></td>
     <td><font size=2>1405</font></td>
     <td><font size=2>410</font></td>
@@ -249,7 +249,7 @@
 <tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>9925</font></td>
+    <td><font size=2>10940</font></td>
     <td><font size=2>11220</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
