--- a/week18.html
+++ b/week18.html
@@ -109,15 +109,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Goff (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Goff (D)</td>      <td></td><td align=right>75</td></tr>
 <tr><td>Jacobs (D)</td>    <td></td><td align=right>90</td></tr>
 <tr><td>Warren (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Remigio (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Remigio (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Pickens (D)</td>   <td></td><td align=right>140</td></tr>
-<tr><td>Kelce (D)</td>     <td></td><td align=right>***</td></tr>
-<tr><td>Bates (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Kelce (D)</td>     <td></td><td align=right>130</td></tr>
+<tr><td>Bates (D)</td>     <td></td><td align=right>40</td></tr>
 <tr><td>Reichard (D)</td>  <td></td><td align=right>30</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>505</td></tr>
 </table>
 </td>
 </tr>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>11325</font></td>
+    <td><font size=2>11830</font></td>
     <td><font size=2>11895</font></td>
     <td><font size=2>1135</font></td>
     <td><font size=2>350</font></td>
@@ -253,5 +253,5 @@
     <td><font size=2>11220</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>245</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 </table>
