--- a/week1.html
+++ b/week1.html
@@ -28,7 +28,7 @@
 <tr><td>Worthy</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Dicker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Shough</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Blue</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
