--- a/freeagt.html
+++ b/freeagt.html
@@ -1,82 +1,93 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2025 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3> 210</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Michael Penix          </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Geno Smith             </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Matthew Stafford       </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Bryce Young            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Joe Flacco             </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Drake Maye             </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Spencer Rattler        </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Russell Wilson         </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Drake Maye             </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Mac Jones              </td><td><font size=3> 240</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Jake Browning          </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Matthew Stafford       </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Bryce Young            </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Michael Penix          </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Spencer Rattler        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Geno Smith             </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Miles Sanders          </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Antonio Gibson         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Rachaad White          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Miles Sanders          </td><td><font size=3>  75</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 345</td></tr>
+<tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Keenan Allen           </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>Malik Washington       </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>Tyquan Thornton        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Cedric Tillman         </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Devontez Walker        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Kayshon Boutte         </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Dyami Brown            </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Michael Pittman        </td><td><font size=3> 115</td></tr>
 <tr><td><font size=3>Calvin Austin          </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Keenan Allen           </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Ben Skowronek          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Jayden Reed            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Cedric Tillman         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Tre Tucker             </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Kayshon Boutte         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>DeMario Douglas        </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Marquise Brown         </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>Romeo Doubs            </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Josh Palmer            </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Dyami Brown            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Ryan Miller            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Marvin Mims            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 100</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Davis Allen            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Zach Ertz              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Hunter Long            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Noah Fant              </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jonnu Smith            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jake Tonges            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Juwan Johnson          </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Hunter Henry           </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Brenton Strange        </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Julian Hill            </td><td><font size=3>   5</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Davis Allen            </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>AJ Barner              </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Luke Farrell           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Hunter Long            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Brock Wright           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Noah Fant              </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Jeremy Ruckert         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jonnu Smith            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Jake Tonges            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Adam Trautman          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Jake Ferguson          </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Hunter Henry           </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Ja'Tavion Sanders      </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>Spencer Shrader        </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 115</td></tr>
-<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Will Reichard          </td><td><font size=3>  95</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>Spencer Shrader        </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Cam Little             </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Chad Ryland            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>Will Reichard          </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>John Parker Romo       </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Andre Szmyt            </td><td><font size=3>  90</td></tr>
 <tr><td><font size=3>Younghoe Koo           </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Blake Grupe            </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>Andre Szmyt            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Jake Moody             </td><td><font size=3>  40</td></tr>
-<tr><td><font size=3>Joshua Karty           </td><td><font size=3>  10</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Raheim Sanders         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Harold Fannin          </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Jalen Milroe           </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
